--- a/netcliks-app/src/app/components/search/search.component.html
+++ b/netcliks-app/src/app/components/search/search.component.html
@@ -1,15 +1,17 @@
 <section class="search">
-    <div class="container">
-      <div class="search-box">
-        <input
-          id="search-input"
-          type="text"
-          placeholder="Что хотите посмотреть?"
-        />
-        <button id="search-button">
-          <img src="images/free-icon-search-2414255 1.svg" alt="search" />
-          <span>Найти</span>
-        </button>
-      </div>
+  <div class="container">
+    <div class="search-box">
+      <input
+        [value]="searchString"
+        id="search-input"
+        type="text"
+        placeholder="Что хотите посмотреть?"
+        (input)="updateValue($event)"
+      />
+      <button id="search-button" (click)="updateSearch($event)">
+        <img src="images/free-icon-search-2414255 1.svg" alt="search" />
+        <span>Найти</span>
+      </button>
     </div>
-  </section>
+  </div>
+</section>
